--- a/Lab07-04-Using-Arrays.ipynb
+++ b/Lab07-04-Using-Arrays.ipynb
@@ -131,6 +131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.4 (A)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -155,6 +162,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 4.4 (B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Code of daysOfWeek   = 1AC5098   \n",
+      "Hash Code of Sunday       = 3626DE35  \n",
+      "Hash Code of Monday       = 6DA50B15  \n",
+      "Hash Code of Tuesday      = 28327565  \n",
+      "Hash Code of Wednesday    = F9C27A3A  \n",
+      "Hash Code of Thursday     = 29AC56BE  \n",
+      "Hash Code of Friday       = 627FD847  \n",
+      "Hash Code of Saturday     = FFA2FB44  \n"
+     ]
+    }
+   ],
+   "source": [
+    " string[] daysOfWeek = { \"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\" };\n",
+    "\n",
+    "    Console.WriteLine($\"Hash Code of daysOfWeek   = {daysOfWeek.GetHashCode(),-10:X}\");\n",
+    "    for (int i = 0; i < daysOfWeek.Length; i++)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Hash Code of {daysOfWeek[i],-12} = {daysOfWeek[i].GetHashCode(),-10:X}\");\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 4.4.1 การหาขนาดของอารเรย์ "
    ]
   },
@@ -163,6 +207,13 @@
    "metadata": {},
    "source": [
     "การหาขนาดของอารเรย์ ทำได้โดยการใช้ 'ชื่อ array'.Length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.4.1 (A)"
    ]
   },
   {
@@ -184,6 +235,13 @@
     "}\n",
     "\n",
     "printDaysOfWeek();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.4.1 (B)"
    ]
   },
   {
