--- a/Lab07-01-Local-variables.ipynb
+++ b/Lab07-01-Local-variables.ipynb
@@ -90,7 +90,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "void print()\n",
@@ -115,7 +122,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "{\n",
@@ -150,7 +164,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "void print()\n",
@@ -190,8 +211,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash code of '2147483647' is: 2147483647\n",
+      "Hash code of '2147483647' is: 0X7FFFFFFF\n",
+      "Hash code of 'Hello World' is: D9B01563\n",
+      "Hash code of 'Hello World' is: 0XD9B01563\n"
+     ]
+    }
+   ],
    "source": [
     "void print()\n",
     "{\n",
@@ -222,8 +261,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash code of '10' is: 10\n",
+      "Hash code of '5' is: 5\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    int a = 10;  // 1st 'a'\n",
@@ -246,8 +301,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash code of 'Hello' is: DE7FBAC9\n",
+      "Hash code of 'World' is: 48E0FDEC\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    string myString = \"Hello\";\n",
@@ -271,8 +342,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash code of '1.2345' is: 2D9D570E\n",
+      "Hash code of '9876543210' is: 1286608616\n",
+      "Hash code of '9876543210' is: 4CB016E8\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    double myDouble = 1.2345;\n",
@@ -298,8 +386,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash code of '5' is: 40140000\n",
+      "Hash code of '5' is: 40140000\n",
+      "Hash code of '5' is: 40140000\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    double A = 5;\n",
@@ -338,8 +443,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'5 == 5' is  True\r\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    double A = 5;\n",
@@ -365,8 +485,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(9,34): error CS0103: The name 'area' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(9,34): error CS0103: The name 'area' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "public void CalculateArea(int width, int height)\n",
     "{\n",
@@ -390,8 +526,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(7,19): error CS0103: The name 'j' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(7,19): error CS0103: The name 'j' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "for (int i = 0; i < 5; i++) \n",
     "{\n",
@@ -412,8 +564,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(13,23): error CS0103: The name 'message' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(13,23): error CS0103: The name 'message' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "public void CheckNumber(int number)\n",
     "{\n",
@@ -441,8 +609,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(3,23): error CS0841: Cannot use local variable 'number' before it is declared",
+     "output_type": "error",
+     "traceback": [
+      "(3,23): error CS0841: Cannot use local variable 'number' before it is declared"
+     ]
+    }
+   ],
    "source": [
     "void print()\n",
     "{\n",
@@ -463,8 +647,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(6,23): error CS0165: Use of unassigned local variable 'number2'",
+     "output_type": "error",
+     "traceback": [
+      "(6,23): error CS0165: Use of unassigned local variable 'number2'"
+     ]
+    }
+   ],
    "source": [
     "void print()\n",
     "{\n",
@@ -494,8 +694,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myNumber = 5\n",
+      "myNumber = 10\n"
+     ]
+    }
+   ],
    "source": [
     "void print()\n",
     "{\n",
@@ -518,8 +734,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myMessage = World\r\n"
+     ]
+    }
+   ],
    "source": [
     "void print()\n",
     "{\n",
@@ -557,10 +788,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(7,23): error CS0103: The name 'isPositive' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(7,23): error CS0103: The name 'isPositive' does not exist in the current context"
+     ]
+    }
+   ],
+   "source": [
+    "void CheckNumber(int number) \n",
+    "{ \n",
+    "    if (number > 0) \n",
+    "    { \n",
+    "        bool isPositive = true; \n",
+    "    } \n",
+    "    Console.WriteLine(isPositive); \n",
+    "}  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1.5.2 ผลลัพธ์ของโค้ดต่อไปนี้คืออะไร  \n",
+    "error เกิดขึ้นบรรทัดที่ 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 1.5.2 ผลลัพธ์ของโค้ดต่อไปนี้คืออะไร  \n",
     "```csharp\n",
     "int number = 10; \n",
     "ChangeValue(ref number); \n",
@@ -571,6 +834,41 @@
     "}\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int number = 10; \n",
+    "ChangeValue(ref number); \n",
+    "Console.WriteLine(number); \n",
+    "void ChangeValue(ref int num) \n",
+    "{ \n",
+    "    num = 20; \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ผลลัพธ์คือ 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -584,6 +882,35 @@
     "} \n",
     "Console.WriteLine(i);  \n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(5,19): error CS0103: The name 'i' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(5,19): error CS0103: The name 'i' does not exist in the current context"
+     ]
+    }
+   ],
+   "source": [
+    "for (int i = 0; i < 3; i++) \n",
+    "{ \n",
+    "    Console.WriteLine(i); \n",
+    "} \n",
+    "Console.WriteLine(i);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "error บรรทัดที่5"
    ]
   },
   {
@@ -604,6 +931,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(4,13): error CS0136: A local or parameter named 'x' cannot be declared in this scope because that name is used in an enclosing local scope to define a local or parameter",
+     "output_type": "error",
+     "traceback": [
+      "(4,13): error CS0136: A local or parameter named 'x' cannot be declared in this scope because that name is used in an enclosing local scope to define a local or parameter"
+     ]
+    }
+   ],
+   "source": [
+    "{ \n",
+    "    int x = 10; \n",
+    "    { \n",
+    "        int x = 20; \n",
+    "        Console.WriteLine(x); \n",
+    "    } \n",
+    "    Console.WriteLine(x); \n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "error บรรทัดที่ 4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -618,6 +977,38 @@
     "    Console.WriteLine(isPositive); \n",
     "}  \n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(7,23): error CS0103: The name 'isPositive' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(7,23): error CS0103: The name 'isPositive' does not exist in the current context"
+     ]
+    }
+   ],
+   "source": [
+    "void CheckNumber(int number) \n",
+    "{ \n",
+    "    if (number > 0) \n",
+    "    { \n",
+    "        bool isPositive = true; \n",
+    "    } \n",
+    "    Console.WriteLine(isPositive); \n",
+    "}  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "error บรรทัดที่ 7 "
    ]
   }
  ],
