--- a/Lab07-02-Using-Fields.ipynb
+++ b/Lab07-02-Using-Fields.ipynb
@@ -58,7 +58,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "public class Person\n",
     "{\n",
@@ -369,6 +378,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- สร้าง instance p และ s: สร้างวัตถุสองตัวคือ p และ s จากคลาส Person โดยกำหนดชื่อให้\n",
+    "- ตั้งค่าอายุ เรียกใช้ method SetAge เพื่อตั้งค่าอายุให้กับทั้ง p และ s\n",
+    "- แสดงอายุ เรียกใช้ method ShowAge เพื่อแสดงอายุของทั้ง p และ s\n",
+    "- 1.ความผิดปกติ\n",
+    "การออกแบบให้ _age เป็น static ไม่เหมาะสมในกรณีนี้ เพราะอายุเป็นคุณสมบัติเฉพาะของแต่ละบุคคล ไม่ควรเป็นค่าที่ใช้ร่วมกัน\n",
+    "การใช้ method SetAge เพื่อตั้งค่าให้กับ static field ทำให้เกิดการเปลี่ยนแปลงค่าของ _age ทั่วโลก"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.4.4.1 ตัวอย่างการใช้ประโยชน์จาก static field"
    ]
   },
@@ -408,6 +429,23 @@
    "metadata": {},
    "source": [
     "__อธิบายการทำงานของโปรแกรม__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "เรียกใช้ method print() ในคลาส Example: เมื่อโปรแกรมเริ่มทำงาน จะเข้ามาที่ method print()\n",
+    "\n",
+    "สร้าง object Counter\n",
+    "\n",
+    "สร้าง object c1 ค่า count จะเพิ่มจาก 0 เป็น 1\n",
+    "\n",
+    "สร้าง object c2 ค่า count จะเพิ่มจาก 1 เป็น 2\n",
+    "\n",
+    "สร้าง object c3 ค่า count จะเพิ่มจาก 2 เป็น 3\n",
+    "\n",
+    "ผลลัพธ์ สุดท้ายจะแสดงค่าของ count ซึ่งตอนนี้มีค่าเป็น 3 ออกทาง Console"
    ]
   }
  ],
