--- a/Lab07-02-Using-Fields.ipynb
+++ b/Lab07-02-Using-Fields.ipynb
@@ -158,7 +158,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is  and I am 0 years old.\r\n"
+     ]
+    }
+   ],
    "source": [
     "public  class Person\n",
     "{\n",
@@ -186,7 +194,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(14,3): error CS0122: 'Person.age' is inaccessible due to its protection level",
+     "output_type": "error",
+     "traceback": [
+      "(14,3): error CS0122: 'Person.age' is inaccessible due to its protection level"
+     ]
+    }
+   ],
    "source": [
     "public  class Person\n",
     "{\n",
@@ -216,7 +233,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(22,19): error CS0103: The name 'number' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(22,19): error CS0103: The name 'number' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "class Example\n",
     "{\n",
@@ -271,7 +297,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myInt: 0\n",
+      "myString: \n",
+      "myBool: False\n"
+     ]
+    }
+   ],
    "source": [
     "public class Example\n",
     "{\n",
@@ -333,7 +369,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Panya's Age = 5\n",
+      "Siri's Age = 12\n",
+      "Panya's Age = 12\n"
+     ]
+    }
+   ],
    "source": [
     "public class Person\n",
     "{\n",
@@ -397,7 +443,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\r\n"
+     ]
+    }
+   ],
    "source": [
     "public class Counter\n",
     "{\n",
