--- a/Lab07-03-Parameters-variables.ipynb
+++ b/Lab07-03-Parameters-variables.ipynb
@@ -932,7 +932,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area: 50\n",
+      "Area: 50\n"
+     ]
+    }
+   ],
    "source": [
     "// method CalculateRectangleArea รับ parameter 2 ตัวคือ width และ height ตามลำดับ\n",
     "\n",
@@ -958,7 +967,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product: Apple\n",
+      "Price: 10.5\n",
+      "Quantity: 5\n"
+     ]
+    }
+   ],
    "source": [
     "// method DisplayProduct รับ parameter 3 ตัว เรียงลำดับตามใน method signature\n",
     "void DisplayProduct(string name, double price, int quantity) \n",
@@ -982,7 +1001,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info: Hello\n",
+      "Warning: Warning!\n"
+     ]
+    }
+   ],
    "source": [
     "// method PrintMessage มี optional parameter prefix ที่มีค่า default เป็น \"Info:\"\n",
     "void PrintMessage(string message, string prefix = \"Info:\") \n",
@@ -1005,7 +1033,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name:\n",
+      "Last Name: Doe\n",
+      "Email: john.doe@example.com\r\n"
+     ]
+    }
+   ],
    "source": [
     "class Person\n",
     "{\n",
@@ -1040,7 +1078,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 123\n",
+      "Name: John Doe\n",
+      "City: Bangkok\n"
+     ]
+    }
+   ],
    "source": [
     "// method ShowDetails รับ parameter 3 ตัว\n",
     "void ShowDetails(int id, string name, string city) \n",
