--- a/Lab07-04-Using-Arrays.ipynb
+++ b/Lab07-04-Using-Arrays.ipynb
@@ -141,7 +141,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday\n",
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n"
+     ]
+    }
+   ],
    "source": [
     "public void printDaysOfWeek()\n",
     "{\n",
@@ -169,7 +183,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Code of daysOfWeek   = 28F46F3   \n",
+      "Hash Code of Sunday       = 527EEB60  \n",
+      "Hash Code of Monday       = 812E243D  \n",
+      "Hash Code of Tuesday      = 71D9CAF2  \n",
+      "Hash Code of Wednesday    = 1F0D5566  \n",
+      "Hash Code of Thursday     = 6694000C  \n",
+      "Hash Code of Friday       = B803C8D0  \n",
+      "Hash Code of Saturday     = 81C3CE55  \n"
+     ]
+    }
+   ],
    "source": [
     " string[] daysOfWeek = { \"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\" };\n",
     "\n",
@@ -205,7 +234,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday\n",
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n"
+     ]
+    }
+   ],
    "source": [
     "public void printDaysOfWeek()\n",
     "{\n",
@@ -233,7 +276,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "January\n",
+      "February\n",
+      "March\n",
+      "April\n",
+      "May\n",
+      "June\n",
+      "July\n",
+      "August\n",
+      "September\n",
+      "October\n",
+      "November\n",
+      "December\n"
+     ]
+    }
+   ],
    "source": [
     "// ประกาศ Array เก็บชื่อเดือน (ภาษาอังกฤษ)\n",
     "string[] monthNames = { \"January\", \"February\", \"March\", \"April\", \"May\", \"June\", \n",
@@ -312,7 +374,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array length = 5\n",
+      "After  Array.Resize(ref arr, 10), Array length = 10\n"
+     ]
+    }
+   ],
    "source": [
     "int[] arr = new int[5]; // สร้างอาร์เรย์ขนาด 5\n",
     "\n",
@@ -340,7 +411,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array length = 5\n",
+      "After create new array, Array length = 10\n"
+     ]
+    }
+   ],
    "source": [
     "int[] arr = new int[5]; // สร้างอาร์เรย์ขนาด 5\n",
     "int[] newArr = new int[10]; // สร้างอาร์เรย์ใหม่ขนาด 10\n",
@@ -374,7 +454,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of list = 0\n",
+      "Size of list = 1\n",
+      "Size of list = 2\n",
+      "Size of list = 1\n"
+     ]
+    }
+   ],
    "source": [
     "List<int> list = new List<int>(); // สร้าง List\n",
     "Console.WriteLine($\"Size of list = {list.Count}\");\n",
